// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'descendant-side deep-only :is branch …' 1`] = `
"source: .card :is(:deep(.title))
injectMode: normal
path: expanded

expansion:
  1. placement=normalize-and-rewrite deep=true .card :is([__VUE_SCOPE_DEEP__] .title)

placement input:
  1. placement=normalize-and-rewrite effectiveMode=normal
     - .card [__VUE_SCOPE_DEEP__] .title

placement:
  1. deep=true .card[data-v-trace] [__VUE_SCOPE_DEEP__] .title

cleanup:
  - .card[data-v-trace]  .title

final:
  - .card[data-v-trace]  .title"
`;

exports[`'descendant-side local prefix before d…' 1`] = `
"source: .card :is(.header :deep(.icon))
injectMode: normal
path: expanded

expansion:
  1. placement=rewrite-nested deep=true .card :is(.header [__VUE_SCOPE_DEEP__].icon)

placement input:
  1. placement=rewrite-nested effectiveMode=normal
     - .card :is(.header [__VUE_SCOPE_DEEP__].icon)

placement:
  1. deep=true .card[data-v-trace] :is(.header[data-v-trace] [__VUE_SCOPE_DEEP__].icon)

cleanup:
  - .card[data-v-trace] :is(.header[data-v-trace] .icon)

final:
  - .card[data-v-trace] :is(.header[data-v-trace] .icon)"
`;

exports[`'descendant-side mixed same-element an…' 1`] = `
"source: .card :is(:where(:deep(.title)), .copy)
injectMode: normal
path: expanded

expansion:
  1. placement=normalize-and-rewrite deep=true .card :is(:where([__VUE_SCOPE_DEEP__] .title), .copy)

placement input:
  1. placement=normalize-and-rewrite effectiveMode=normal
     - .card :is(.copy)
     - .card [__VUE_SCOPE_DEEP__] :where(.title)

placement:
  1. deep=true .card[data-v-trace] :is(.copy)
  2. deep=true .card[data-v-trace] [__VUE_SCOPE_DEEP__] :where(.title)

cleanup:
  - .card[data-v-trace] :is(.copy)
  - .card[data-v-trace]  :where(.title)

final:
  - .card[data-v-trace] :is(.copy)
  - .card[data-v-trace]  :where(.title)"
`;

exports[`'direct selector rewrite' 1`] = `
"source: .card .title:where(:hover) > .leaf
injectMode: normal
path: direct

direct:
  - .card .title:where(:hover) > .leaf[data-v-trace]

final:
  - .card .title:where(:hover) > .leaf[data-v-trace]"
`;

exports[`'outer :deep() keeps nested containers…' 1`] = `
"source: .dialog:deep(.panel :is(:deep(.icon), .copy))
injectMode: normal
path: expanded

expansion:
  1. placement=rewrite-nested deep=true .dialog[__VUE_SCOPE_DEEP__] .panel :is([__VUE_SCOPE_DEEP__] .icon, .copy)

placement input:
  1. placement=rewrite-nested effectiveMode=normal
     - .dialog[__VUE_SCOPE_DEEP__] .panel :is([__VUE_SCOPE_DEEP__] .icon, .copy)

placement:
  1. deep=true .dialog[data-v-trace][__VUE_SCOPE_DEEP__] .panel :is([__VUE_SCOPE_DEEP__] .icon, .copy)

cleanup:
  - .dialog[data-v-trace] .panel :is(.icon, .copy)

final:
  - .dialog[data-v-trace] .panel :is(.icon, .copy)"
`;

exports[`'slotted selectors keep their slot-sco…' 1`] = `
"source: :slotted(.a:is(.b))
injectMode: normal
path: expanded

expansion:
  1. placement=direct deep=false [__VUE_SCOPE_NO_INJECT__].a[data-v-trace-s]:is(.b)

placement input:
  1. placement=direct effectiveMode=none
     - .a[data-v-trace-s]:is(.b)

placement:
  1. deep=false .a[data-v-trace-s]:is(.b)

cleanup:
  - .a[data-v-trace-s]:is(.b)

final:
  - .a[data-v-trace-s]:is(.b)"
`;
